feat: tagging actions
docs: tagging swagger
