# config/routes.rb
@@ -38,4 +38,10 @@ Rails.application.routes.draw do
       resources :assigns, only: %i[create destroy index]
     end
   end
+
+  namespace :api do
+    namespace :v1 do
+      resources :taggings, only: %i[create destroy]
+    end
+  end
 end
